fix favicon not showing problem, change heading color to dark-color and add linear gradient for all headings, add better box shadows for login and signup forms

--- a/scss/partials/_chat_btn.scss
+++ b/scss/partials/_chat_btn.scss
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 
   background-color: $dark-color-tint;
 
