--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -1,8 +1,18 @@
 footer {
-  // background-color: $black-color;
   background-color: $dark-color;
   color: $white-color;
   padding-top: 6rem;
+
+  h3 {
+    background: linear-gradient(to right, #ffffff 0%, #777777 100%);
+    -webkit-background-clip: text;
+  }
+
+  pre {
+    font-family: $montserrat-font;
+    height: auto;
+    margin-bottom: -30px;
+  }
 
   .container {
     display: grid;
@@ -28,10 +38,14 @@ footer {
       flex-direction: column;
       gap: 1rem;
 
+      div {
+        display: flex;
+        // justify-content: flex-start;
+      }
+
       & > div {
         display: flex;
-        align-items: center;
-        gap: 0.6rem;
+        flex-direction: column;
       }
 
       & > h3 {
